--- a/sass/blocks/_adaptive.sass
+++ b/sass/blocks/_adaptive.sass
@@ -5,7 +5,7 @@
         & .nav-wrap 
           justify-content: space-between
           width: 100%
-          height: 80px 
+          height: 80px  
           & .menu 
             & .burger 
               display: flex 
@@ -51,11 +51,12 @@
               left: 0
               top: 0
               width: 100%
-              height: 100%
+              height: 100vh
               background: rgba(#000000,.95)
               transition: .3s linear
               opacity: 0
               visibility: hidden
+              z-index: 9998
               & ul 
                 display: block 
                 text-align: center
@@ -63,6 +64,8 @@
                 top: 50%
                 left: 50%
                 transform: translate(-50%,-50%)
+                & .show-home
+                  display: block 
                 & li 
                   &:hover ul 
                     display: none 
@@ -80,13 +83,33 @@
               &.show 
                 opacity: 1
                 visibility: visible
-        & .social
-          display: none 
+              & .social 
+                opacity: 0
+                visibility: hidden
+                position: absolute 
+                bottom: 50px 
+                left: 50%
+                transform: translateX(-50%)
+                & a 
+                  color: #999999
+                &.show 
+                  opacity: 1
+                  visibility: visible
   .main-content
     & .sidebar 
       display: none 
     & .main-title 
       width: 100%
+    & .main-blocks 
+      width: 100%
+@media screen and ( max-width: 550px )
+  .main-content
+    & .main-blocks 
+      flex-direction: column 
+      width: 100%
+      & .block-content 
+        margin: auto
+        width: 100%
 @media screen and ( max-width: 400px )
   .header
     & .top-header  
