--- a/sass/blocks/_main-content.sass
+++ b/sass/blocks/_main-content.sass
@@ -40,6 +40,58 @@
       color: #8d8d8d
       margin-top: 30px
       letter-spacing: 1px
-
+  & .main-blocks 
+    margin-top: 45px
+    margin-bottom: 60px 
+    width: 65.8%
+    display: flex 
+    justify-content: space-between
+    & .block-content
+      width: 48%
+      & .block 
+        position: relative
+        margin-bottom: 30px 
+        &:hover .content 
+          opacity: 1
+          visibility: visible
+        &:hover .overlay 
+          opacity: 0
+          visibility: hidden
+        & .overlay 
+          position: absolute
+          top: 0
+          left: 0
+          width: 100%
+          height: 100%
+          background: #F1F1F1
+          transition: .3s linear 
+        & .content 
+          position: absolute
+          bottom: 40px 
+          left: 40px 
+          transition: .3s linear 
+          opacity: 0
+          visibility: hidden
+          & h5 
+            text-transform: uppercase
+            font-size: 23px
+            letter-spacing: 1px
+            +black 
+          & p 
+            font-size: 13px
+            color: #686868
+            letter-spacing: 1px
+        & a 
+          position: absolute
+          top: 0
+          left: 0
+          width: 100%
+          height: 100%
+      & .block1, .block4, .block5, .block6
+        height: 275px 
+      & .block2
+        height: 375px 
+      & .block3
+        height: 245px 
 
     
