--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,6 @@
 @import 'interface'
 @import 'blocks/header'
+@import 'blocks/preloader'
 @import 'blocks/main-content'
 @import 'blocks/footer'
 @import 'blocks/adaptive'
